2003-09-26  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-cvs-b103

	* Implemented support for multiple photo print services. Chalked in
	  support for EZ Prints, however it doesn't do anything yet. Bumped
	  album version to migrate to new data format.

	* Removed PHP warning from upgrade_album.php.

2003-09-26  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b102

	* Bugfix: Count ouf maybe and unavailable locales

	* Bugfix: Remove \" inside a _()

	* Language: Updated German (de_DE) :), Korean (ko_KR)

	* Change: Added $Id and Copyright in some files

2003-09-26  Chris Schwerdt <muti@afterglo.ws> 1.4.1-cvs-b101

	* Fixed auto rotate bug in gallery_remote2.php. Comparison had not
	  been changed.

2003-09-26  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.1-cvs-b100

	* Changed autoRotate to auto_rotate in gallery_remote2.php for
	  protocol consistency, added debugging statements.

2003-09-26  Chris Schwerdt <muti@afterglo.ws> 1.4.1-cvs-b99

	* Added support to disable auto rotate on add-item in gallery
	  remote.

2003-09-26  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b98

	* Change: Use $borderColor instead of white when album_thumb_frame_style="dots"

2003-09-26  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b97

	* Language: Update Bulgarian (bg_BG), German (de_DE)

	* Language: New Language Catalan (ca_ES) 

	* Language: Synced against changes

	* Change: Tweaked ml_pulldown.inc for flags to see which language is current.

2003-09-26 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b96
	
	* Print progress information when upgrading users, so we don't get
	  "it just hangs" error reports.

2003-09-25  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b95

	* Bugfix: "send password" link was not visible in login.php

	* Bugfix: Anker Tag <a ...></a> around a table is not allowed.
		  Caused albums thumbs to be no link

	* Change: Startpage is valid html again.

	* New: Frame around album thumbs is now configurable

	* Language: Synced against changes
