@@ -1,3 +1,9 @@
+2003-09-26  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-cvs-b104
+
+	* Added preliminary support for EZ Prints photo print service.
+
+	* Fixed a Config. Wizard PHP warning as well as a debugging line.
+	
 2003-09-26  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-cvs-b103
 
 	* Implemented support for multiple photo print services. Chalked in
